// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser #parse happy path "=(2+3)*5" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": BinaryOp {
    "_name": "BinaryOp",
    "leftNode": NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "2",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
    "opNode": Token {
      "html": null,
      "text": "+",
      "type": "PLUS",
      "value": null,
      "whitespace": "",
    },
    "rightNode": NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "3",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
  },
  "opNode": Token {
    "html": null,
    "text": "*",
    "type": "MULT",
    "value": null,
    "whitespace": "",
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "numberNode": Token {
      "html": null,
      "text": "5",
      "type": "NUMBER",
      "value": null,
      "whitespace": "",
    },
  },
}
`;

exports[`Parser #parse happy path "=2" 1`] = `
NumberNode {
  "_name": "NumberNode",
  "numberNode": Token {
    "html": null,
    "text": "2",
    "type": "NUMBER",
    "value": null,
    "whitespace": "",
  },
}
`;

exports[`Parser #parse happy path "=2+-3" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": NumberNode {
    "_name": "NumberNode",
    "numberNode": Token {
      "html": null,
      "text": "2",
      "type": "NUMBER",
      "value": null,
      "whitespace": "",
    },
  },
  "opNode": Token {
    "html": null,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": "",
  },
  "rightNode": UnaryOp {
    "_name": "UnaryOp",
    "expr": NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "3",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
    "opNode": Token {
      "html": null,
      "text": "-",
      "type": "MINUS",
      "value": null,
      "whitespace": "",
    },
  },
}
`;

exports[`Parser #parse happy path "=2+3" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": NumberNode {
    "_name": "NumberNode",
    "numberNode": Token {
      "html": null,
      "text": "2",
      "type": "NUMBER",
      "value": null,
      "whitespace": "",
    },
  },
  "opNode": Token {
    "html": null,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": "",
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "numberNode": Token {
      "html": null,
      "text": "3",
      "type": "NUMBER",
      "value": null,
      "whitespace": "",
    },
  },
}
`;

exports[`Parser #parse happy path "=2+3/10+8" 1`] = `
BinaryOp {
  "_name": "BinaryOp",
  "leftNode": BinaryOp {
    "_name": "BinaryOp",
    "leftNode": NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "2",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
    "opNode": Token {
      "html": null,
      "text": "+",
      "type": "PLUS",
      "value": null,
      "whitespace": "",
    },
    "rightNode": BinaryOp {
      "_name": "BinaryOp",
      "leftNode": NumberNode {
        "_name": "NumberNode",
        "numberNode": Token {
          "html": null,
          "text": "3",
          "type": "NUMBER",
          "value": null,
          "whitespace": "",
        },
      },
      "opNode": Token {
        "html": null,
        "text": "/",
        "type": "DIV",
        "value": null,
        "whitespace": "",
      },
      "rightNode": NumberNode {
        "_name": "NumberNode",
        "numberNode": Token {
          "html": null,
          "text": "10",
          "type": "NUMBER",
          "value": null,
          "whitespace": "",
        },
      },
    },
  },
  "opNode": Token {
    "html": null,
    "text": "+",
    "type": "PLUS",
    "value": null,
    "whitespace": "",
  },
  "rightNode": NumberNode {
    "_name": "NumberNode",
    "numberNode": Token {
      "html": null,
      "text": "8",
      "type": "NUMBER",
      "value": null,
      "whitespace": "",
    },
  },
}
`;

exports[`Parser #parse happy path "=sum(5)" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "5",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
  ],
  "funcNode": Token {
    "html": null,
    "text": "sum",
    "type": "FUNCTION",
    "value": null,
    "whitespace": "",
  },
}
`;

exports[`Parser #parse happy path "=sum(5, SUM(7,6) ,  (10+5/7))" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "5",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
    FuncOp {
      "_name": "FuncOp",
      "argNodes": Array [
        NumberNode {
          "_name": "NumberNode",
          "numberNode": Token {
            "html": null,
            "text": "7",
            "type": "NUMBER",
            "value": null,
            "whitespace": "",
          },
        },
        NumberNode {
          "_name": "NumberNode",
          "numberNode": Token {
            "html": null,
            "text": "6",
            "type": "NUMBER",
            "value": null,
            "whitespace": "",
          },
        },
      ],
      "funcNode": Token {
        "html": null,
        "text": "SUM",
        "type": "FUNCTION",
        "value": null,
        "whitespace": " ",
      },
    },
    BinaryOp {
      "_name": "BinaryOp",
      "leftNode": NumberNode {
        "_name": "NumberNode",
        "numberNode": Token {
          "html": null,
          "text": "10",
          "type": "NUMBER",
          "value": null,
          "whitespace": "",
        },
      },
      "opNode": Token {
        "html": null,
        "text": "+",
        "type": "PLUS",
        "value": null,
        "whitespace": "",
      },
      "rightNode": BinaryOp {
        "_name": "BinaryOp",
        "leftNode": NumberNode {
          "_name": "NumberNode",
          "numberNode": Token {
            "html": null,
            "text": "5",
            "type": "NUMBER",
            "value": null,
            "whitespace": "",
          },
        },
        "opNode": Token {
          "html": null,
          "text": "/",
          "type": "DIV",
          "value": null,
          "whitespace": "",
        },
        "rightNode": NumberNode {
          "_name": "NumberNode",
          "numberNode": Token {
            "html": null,
            "text": "7",
            "type": "NUMBER",
            "value": null,
            "whitespace": "",
          },
        },
      },
    },
  ],
  "funcNode": Token {
    "html": null,
    "text": "sum",
    "type": "FUNCTION",
    "value": null,
    "whitespace": "",
  },
}
`;

exports[`Parser #parse happy path "=sum(5,6,7)" 1`] = `
FuncOp {
  "_name": "FuncOp",
  "argNodes": Array [
    NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "5",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
    NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "6",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
    NumberNode {
      "_name": "NumberNode",
      "numberNode": Token {
        "html": null,
        "text": "7",
        "type": "NUMBER",
        "value": null,
        "whitespace": "",
      },
    },
  ],
  "funcNode": Token {
    "html": null,
    "text": "sum",
    "type": "FUNCTION",
    "value": null,
    "whitespace": "",
  },
}
`;
